BookAppointmentActivity.java adding date and time functionality for booking appointment

--- a/app/src/main/res/layout/activity_book_appointment.xml
+++ b/app/src/main/res/layout/activity_book_appointment.xml
@@ -131,7 +131,7 @@
         android:layout_height="41dp"
         android:layout_marginTop="168dp"
         android:background="@drawable/btn_bg"
-        android:text="Register"
+        android:text="Book Appointment"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.556"
         app:layout_constraintStart_toStartOf="parent"
