--- a/app/src/main/res/layout/activity_doctor_details.xml
+++ b/app/src/main/res/layout/activity_doctor_details.xml
@@ -39,7 +39,7 @@
         />
 
     <ListView
-        android:id="@+id/listViewDD"
+        android:id="@+id/listViewLT"
         android:layout_width="350dp"
         android:layout_height="500dp"
         android:layout_margin="10dp"
@@ -53,7 +53,7 @@
 
 <!--    Button-->
     <Button
-        android:id="@+id/buttonDDBack"
+        android:id="@+id/buttonLTBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="BACK"
