--- a/app/src/main/res/layout/activity_doctor_details.xml
+++ b/app/src/main/res/layout/activity_doctor_details.xml
@@ -24,7 +24,7 @@
     />
 <!--  title  -->
     <TextView
-        android:id="@+id/textViewDDtitle"
+        android:id="@+id/textViewCartTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Default Text"
@@ -39,7 +39,7 @@
         />
 
     <ListView
-        android:id="@+id/textView_logo_6"
+        android:id="@+id/textViewCart"
         android:layout_width="350dp"
         android:layout_height="500dp"
         android:layout_margin="10dp"
@@ -49,11 +49,11 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewDDtitle" />
+        app:layout_constraintTop_toBottomOf="@+id/textViewCartTitle" />
 
 <!--    Button-->
     <Button
-        android:id="@+id/buttonLTBack"
+        android:id="@+id/buttonCartBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="BACK"
