--- a/app/src/main/res/layout/activity_lab_test_details.xml
+++ b/app/src/main/res/layout/activity_lab_test_details.xml
@@ -23,7 +23,7 @@
         app:layout_constraintVertical_bias="0.00999999" />
     <!--  Deliver Location title -->
     <TextView
-        android:id="@+id/textView_logo_6"
+        android:id="@+id/textViewCart"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="628dp"
@@ -48,7 +48,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView_logo_6"/>
+        app:layout_constraintTop_toBottomOf="@+id/textViewCart"/>
     <!--Back-->
     <Button
         android:id="@+id/buttonLDBack"
