--- a/app/src/main/res/layout/activity_book_appointment.xml
+++ b/app/src/main/res/layout/activity_book_appointment.xml
@@ -186,7 +186,7 @@
         app:layout_constraintTop_toBottomOf="@+id/editTextAppFees" />
 <!--Time-->
     <Button
-        android:id="@+id/buttonCartTime"
+        android:id="@+id/buttonAppTime"
         style="?android:spinnerStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
