--- a/app/src/main/res/layout/activity_cart_lab.xml
+++ b/app/src/main/res/layout/activity_cart_lab.xml
@@ -54,7 +54,7 @@
         app:layout_constraintVertical_bias="0.078" />
 
     <ListView
-        android:id="@+id/textViewCart"
+        android:id="@+id/listViewCart"
         android:layout_width="331dp"
         android:layout_height="345dp"
         android:layout_margin="10dp"
@@ -98,7 +98,7 @@
         android:text="Select Date"
         android:textColor="@color/yellowLight"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.079"
+        app:layout_constraintHorizontal_bias="0.12"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewCartTotalCost" />
 
@@ -106,24 +106,24 @@
         android:id="@+id/textViewCartTotalCost"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="12dp"
         android:text="Total Cost:2000/-"
         android:textColor="@color/yellowLight"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.482"
+        app:layout_constraintHorizontal_bias="0.438"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewCart" />
+        app:layout_constraintTop_toBottomOf="@+id/listViewCart" />
 
     <Button
-        android:id="@+id/buttonAppDate"
+        android:id="@+id/buttonCartDate"
         style="?android:spinnerStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="27/10/2022"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.093"
+        app:layout_constraintHorizontal_bias="0.131"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
@@ -144,10 +144,10 @@
         style="?android:spinnerStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:text="10:00"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.879"
+        app:layout_constraintHorizontal_bias="0.9"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
