--- a/app/src/main/res/layout/activity_order_details.xml
+++ b/app/src/main/res/layout/activity_order_details.xml
@@ -36,21 +36,20 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.067" />
 
     <ListView
         android:id="@+id/listViewOD"
-        android:layout_width="344dp"
-        android:layout_height="523dp"
+        android:layout_width="337dp"
+        android:layout_height="461dp"
         android:layout_marginStart="-40dp"
         android:layout_marginTop="12dp"
         android:layout_marginEnd="-40dp"
         app:layout_constraintEnd_toEndOf="@+id/textViewODTitle"
         app:layout_constraintHorizontal_bias="0.51"
         app:layout_constraintStart_toStartOf="@+id/textViewODTitle"
-        app:layout_constraintTop_toBottomOf="@+id/textViewODTitle"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/textViewODTitle" />
 
     <Button
         android:id="@+id/buttonODBack"
